# DInvG

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README  README.md  StInGX Manual.md  compile.sh  compile_commands.json  diff.sh  emptycheck.sh  main.cpp  output.txt  output1.out  output2.out  readthis.md  run_inv.sh  runtest.sh  test.py  test_pa.cpp  upload.sh
Benchmark/array/: IP_string_test.c  RFC_isMatch.c  binary_search.c  foo_loop_contract.c  invar_havoc_static_multi-dim_array.c  max_seq.c  mbedtls_ssl_safer_memcmp.c  mbedtls_zeroize_for.c  mbedtls_zeroize_while.c  nested_string_cmp.c  numeq.c  quicksort_contracts.c  test_loop_assign.c
Benchmark/in/: 09_Speed_SimpleSingle.in  09_Speed_SimpleSingle_s.in  10_PIPS_Gopan07.in  10_PIPS_Gulwani07.in  10_PIPS_Halbwachs.in  11_Splitter_CAV06.in  11_Splitter_POPL07.in  11_Splitter_ex1.in  11_Splitter_ex2.in  12_PAGAI_Motivating_i.in  12_PAGAI_Motivating_m.in  12_PAGAI_Motivating_s.in  16_Proteus_fig1a_i.in  16_Proteus_fig1a_m_i.in  16_Proteus_fig1a_m_s.in  16_Proteus_fig1a_s_1.in  16_Proteus_fig1a_s_2.in  16_Proteus_fig1a_s_3.in  16_Proteus_fig1b.in  16_Proteus_fig1c_i.in  16_Proteus_fig1c_s.in  16_Proteus_fig1d.in  16_Proteus_fig1f_i.in  16_Proteus_fig1f_s.in  16_Proteus_fig6a_count.in  16_Proteus_fig6a_i.in  16_Proteus_fig6a_m.in  16_Proteus_fig6a_s.in  19_Disjunctive_cnt_fft1_i.in  19_Disjunctive_cnt_fft1_inner.in  19_Disjunctive_cnt_fft1_s_1.in  19_Disjunctive_cnt_fft1_s_2.in  19_Disjunctive_cnt_minver_i.in  19_Disjunctive_cnt_minver_s_1.in  19_Disjunctive_cnt_minver_s_2.in  19_Disjunctive_correct1_i.in  19_Disjunctive_correct1_s.in  19_Disjunctive_eudiv_i.in  19_Disjunctive_eudiv_s.in  19_Disjunctive_janne_complex.in  (+20 more)
Benchmark/mixed array pointer/: BufferWrite.c  GetTlvLen.c  RFC_findBitMap.c  adp_1.c  file_from_patch.c  loop_assigns-04.c  simpleRFC.c  simpleRFC32.c
Benchmark/numerical/: invar_assigns_opt.c  invar_check_break_pass.c  invar_check_continue.c  invar_check_nested_loops.c  invar_check_pointer_modifies-01.c  invar_check_sufficiency.c  invar_havoc_dynamic_array_const_idx.c  invar_havoc_static_array_const_idx.c  invar_havoc_static_multi-dim_array_all_const_idx.c  invar_loop_constant_no_modify.c  invar_loop_constant_pass.c  loop_assigns-05.c  loop_assigns_scoped_local_statics.c  loop_assigns_scoped_local_statics_propagate.c  loop_body_with_hole.c  loop_contracts_do_while.c  variant_multi_instruction_loop_head.c  variant_multidimensional_two_index_variables.c
Frontend/: ACSLComment.cpp  ACSLComment.hpp  CFGVisitor.cpp  CFGVisitor.hpp  CMakeLists.txt  CParser.cpp  CParser.h  DNFExpr.cpp  DNFExpr.hpp  Define.cpp  Define.hpp  Library.cpp  Library.hpp  ParserUtility.cpp  ParserUtility.h  ProgramState.cpp  ProgramState.h  TransitionSystem.cpp  TransitionSystem.hpp  Variable.cpp  Variable.hpp
List_pointer/: List_structure_infer.cpp
Parser/: test  test.cpp
Result/array/: IP_string_test.cfg  RFC_isMatch.cfg  binary_search.cfg  foo_loop_contract.cfg  invar_havoc_static_multi-dim_array.cfg  max_seq.cfg  mbedtls_ssl_safer_memcmp.cfg  mbedtls_zeroize_for.cfg  mbedtls_zeroize_while.cfg  nested_string_cmp.cfg  numeq.cfg  quicksort_contracts.cfg  test_loop_assign.cfg
Result/mixed array pointer/: BufferWrite.cfg  GetTlvLen.cfg  RFC_findBitMap.cfg  adp_1.cfg  file_from_patch.cfg  loop_assigns-04.cfg  simpleRFC.cfg  simpleRFC32.cfg
Result/numerical/: invar_assigns_opt.cfg  invar_check_break_pass.cfg  invar_check_continue.cfg  invar_check_multiple_loops.cfg  invar_check_nested_loops.cfg  invar_check_pointer_modifies-01.cfg  invar_check_sufficiency.cfg  invar_havoc_dynamic_array_const_idx.cfg  invar_havoc_static_array_const_idx.cfg  invar_havoc_static_multi-dim_array_all_const_idx.cfg  invar_loop_constant_no_modify.cfg  invar_loop_constant_pass.cfg  invariant_side_effects.cfg  loop_assigns-05.cfg  loop_assigns_scoped_local_statics.cfg  loop_assigns_scoped_local_statics_propagate.cfg  loop_body_with_hole.cfg  loop_contracts_do_while.cfg  variant_multi_instruction_loop_head.cfg  variant_multidimensional_two_index_variables.cfg  variant_side_effects_fail.cfg  variant_while_true_pass.cfg
Stingx/: (A)Propagation.cpp  (A)Propagation.h  .clang-format  About_Construct_input.txt  CMakeLists.txt  Clump.cc  Clump.cpp  Clump.h  Context.cc  Context.cpp  Context.h  DisequalityStore.cc  DisequalityStore.cpp  DisequalityStore.h  DualInvariantMap.cc  DualInvariantMap.cpp  DualInvariantMap.h  DualTransitionRelation.cc  DualTransitionRelation.cpp  DualTransitionRelation.h  Elimination.cc  Elimination.cpp  Elimination.h  Expression.cc  Expression.cpp  Expression.h  ExpressionStore.cc  ExpressionStore.cpp  ExpressionStore.h  InvariantMap.cc  InvariantMap.cpp  InvariantMap.h  LinExpr.cc  LinExpr.cpp  LinExpr.h  LinTS.cpp  LinTS.h  LinTS.l  LinTS.y  LinTransform.cc  (+69 more)
benchmark/VMCAI2019/: computed_th.c  correct1.c  div.c  ex2b.c  indirect.c  loop_seq.c  mul2.c  severt_meter.c  whilelen.c
frontend/: CParser.cpp  CParser.h  ParserUtility.cpp  ProgramState.h
scripts/: exp.py
stingx/: CMakeLists.txt  Clump.cpp  Clump.h  Context.h  DisequalityStore.cpp  Elimination.cpp  Expression.cpp  ExpressionStore.cpp  LinTS.cpp  LinTS.h  Location.cpp  Location.h  MatrixStore.cpp  PolyStore.cpp  PolyStore.h  PolyUtils.cpp  PolyUtils.h  Rational.h  System.cpp  ToolUtils.h  TransitionRelation.cpp  TransitionRelation.h  Tree.cpp  funcs.h  lstingx.cpp  var-info.cpp
tmp/output/: 09_Speed_SimpleSingle_diff.out  09_Speed_SimpleSingle_lstingX.out  09_Speed_SimpleSingle_s_diff.out  09_Speed_SimpleSingle_s_origin.out  10_PIPS_Gopan07_diff.out  10_PIPS_Gopan07_lstingX.out  10_PIPS_Gulwani07_diff.out  10_PIPS_Gulwani07_origin.out  10_PIPS_Halbwachs_diff.out  10_PIPS_Halbwachs_lstingX.out  11_Splitter_CAV06_diff.out  11_Splitter_CAV06_origin.out  11_Splitter_POPL07_diff.out  11_Splitter_POPL07_origin.out  11_Splitter_ex1_diff.out  11_Splitter_ex1_lstingX.out  11_Splitter_ex2_diff.out  11_Splitter_ex2_origin.out  12_PAGAI_Motivating_i_diff.out  12_PAGAI_Motivating_i_lstingX.out  12_PAGAI_Motivating_m_diff.out  12_PAGAI_Motivating_m_origin.out  (+74 more)
(+211 files in other folders)
